// $Id$

PHPMailer 6.x-2.x, xxxx-xx-xx
-----------------------------
#491658 by a_c_m, smk-ka: Setting FromName also for Mime Mail messages.
#499824, #551004 by smk-ka: Added support for PHPMailer's exception handling
 to avoid dumping errors to the browser (since 5.0.0).
#516450 by smk-ka: Fixed test mail cannot be sent at the same time as enabling
 PHPMailer.
by smk-ka: Cleaned up Mime Mail integration. Ported the HTML e-mail preview to
 D6.
by smk-ka: Disabling the module now resets the smtp_library and mimemail_engine
 variables, to avoid a WSOD.
by smk-ka: Checking requirements before allowing to install the module.
by smk-ka: Documentation updates.
by smk-ka: Fixed PHPMailer settings not saved when used as Mime Mail engine.
by smk-ka: Fixed Admin Menu not visible anymore.
by smk-ka: Regression: Fixed not being able to enable either Mime Mail or
 PHPMailer for e-mail delivery.
by smk-ka: Moved resetting email properties to DrupalPHPMailer::SmtpSend().
by smk-ka: Provide more user-friendly error messages.
#607204 by smk-ka: Added support for Reply-To headers.
#633278 by smk-ka: Increased security: added an option to hide the password on
 the settings page and added a log message if the configuration changed.


PHPMailer 6.x-2.1, 2009-06-10
-----------------------------
by smk-ka: Updated external PHPMailer message strings.
by smk-ka: Don't set FromName to an empty string.
by smk-ka: Added public method SmtpSend for compatibility with PHPMailer 5.x.


PHPMailer 6.x-2.0, 2009-05-17
-----------------------------
by sun: Fixed wrong link to ex. watchdog page.
by sun: Added HTML mail preview when Mime Mail module is installed.
by sun: Simplified settings form (UX).
by smk-ka: Fixed improper RFC 822 formatted date (by Mime Mail).
by smk-ka: Fixed empty mail body with Mime Mail.
by smk-ka: Fixed inconsistent linefeeds with Mime Mail.
by smk-ka: Fixed phpmailer_debug_mail not always rerouting.
#375422 by recidive: Fixed mails are sent to multiple recipients.