@@ -2,6 +2,8 @@
 
 PHPMailer 6.x-2.x, xxxx-xx-xx
 -----------------------------
+#634868 by smk-ka: Fixed bad e-mail addresses in sent mails if display names
+ containes a comma.
 #491658 by a_c_m, smk-ka: Setting FromName also for Mime Mail messages.
 #499824, #551004 by smk-ka: Added support for PHPMailer's exception handling
  to avoid dumping errors to the browser (since 5.0.0).
